--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -83,6 +83,7 @@
 	line-height: 1;
 	margin: 5px 0 0 0;
 	color: #3b393d;
+	text-shadow: 1px 1px 2px #6E6E6E;
 }
 
 .card__container--closed .card__title {
@@ -106,9 +107,10 @@
 	margin: 0 auto;
 	padding: 25px 30px 100px;
 	color: #3b393d;
+	text-align: justify;
 }
 
-.card__copy p:first-of-type {
+.card__copy .meta p:first-of-type {
 	font-size: 1.5em;
 	padding: 0 0 1em 0;
 }
@@ -181,6 +183,7 @@
 	.card__copy {
 		font-size: 90%;
 		padding: 25px 0px 100px;
+		text-align: justify;
 	}
 }
 
@@ -265,16 +268,17 @@ a:focus {
 }
 
 .header h1 {
-	font-size: 3em;
+	font-size: 6em;
 	font-weight: 400;
 	line-height: 1.2;
 	margin: .5em 0 0;
+	font-family: 'cac_champagneregular';
 }
 
 .header h1 span {
-	font-size: .45em;
+	font-size: .50em;
 	display: block;
-	padding: .5em 0 1em;
+	padding: .5em 0 .5em;
 	color: #999;
 }
 /* Top Navigation Style */
